--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 <div class="logotop">
   <en href="http://www.urtekram.msfh.dk">
     <!-- tjek at det er den rigtige url-->
-    <img src="image/Urtekram logo.svg" alt="Urtekram - Økologi til din hverdag" id="toplogo"></a>
+    <img src="image/Urtekram-logo.svg" alt="Urtekram - Økologi til din hverdag" id="toplogo"></a>
     <a href="Mine opskrifter.html"> <img src="image/mine opskrifter.svg" alt="Mineopskrifter" id="Mineopskrifter"></a>
 
   </nav>
@@ -215,10 +215,10 @@
 
   <div class="teasertekst">
     <article class ="beskrivelse">
-      <billede>
-      <scource srcset="image/Æggekage med laks og squash.png" media="(min-widht:700px)">
-        <img src="image/Æggekage med laks og sqaush.png" alt= "Opskrift på Æggekage" class="kortbillede"
-      </billede>
+      <figure>
+
+        <img src="image/Æggekage med laks og sqaush.png" alt= "Opskrift på Æggekage" class="kortbillede">
+      </figure>
 
       <p> Æggekage med laks og squash </p>
     </artikel>
@@ -254,7 +254,7 @@
         <source srcset="image/" media="(min-widht: 700px)">
           <img src"image/" alt= "Vind et års forbrug af Urtekrams Fettucine" id="forbrug"
         </design>
-        
+
 
 
 
