--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="discription" content="dette er en side" />
   <meta name="keywords" content="urtekram, pasta, fettuccine, mad, food, økologi, italien, inspiration, hverdagsmad">
   <meta name="viewport" content="width=enhedsbredde, indledende skala=1,0">
-  <link rel="typografiark" href="css/style.css">
+  <link rel="typografiark" href="css/landingpage.css">
 
   <!-- favicon = ikon i faneblad / browser -->
   <link rel="ikon" type="image/x-ikon" href="image/Urtekramlogo.svg" />
@@ -18,125 +18,64 @@
       <ul klasse="menu">
         <li class"menuitem"><a href="#">Produkter</a>
           <ul klasse="dropdown">
-            <li>
-              <klasse="sub" href="#">Bagning
-            </li>
-            <li>
-              <class="sub" href="#">Dressing & saucer
-            </li>
-            <li>
-              <klasse="sub" href="#">Drikkevarer
-            </li>
-            <li>
-              <class="sub" href="#">Fond
-            </li>
-            <li>
-              <klasse="sub" href="#">Frost
-            </li>
-            <li>
-              <class="sub" href="#">Glutenfri
-            </li>
-            <li>
-              <klasse="sub" href="#">Kolonial
-            </li>
-            <li>
-              <class="sub" href="#">Konserves
-            </li>
-            <li>
-              <klasse="sub" href="#">Krydderier
-            </li>
-            <li>
-              <class="sub" href="#">Olie & eddike
-            </li>
-            <li>
-              <klasse="sub" href="#">Snacks
-            </li>
+            <li><a klasse="sub" href="#">Bagning</a></li>
+
+            <li><a class="sub" href="#">Dressing & saucer</a></li>
+            <li><a klasse="sub" href="#">Drikkevarer</a></li>
+            <li><a class="sub" href="#">Fond</a></li>
+            <li><a klasse="sub" href="#">Frost</a></li>
+            <li><a class="sub" href="#">Glutenfri</a></li>
+            <li><a klasse="sub" href="#">Kolonial</a></li>
+            <li><a class="sub" href="#">Konserves</a></li>
+            <li><a klasse="sub" href="#">Krydderier</a></li>
+            <li><a class="sub" href="#">Olie & eddike</a></li>
+            <li><a klasse="sub" href="#">Snacks</a></li>
           </ul>
         </li>
 
         <li class="menuitem"><a href="#">Opskrifter</a>
-          <ul klasse"dropdown">
-            <li>
-              <class="sub" href="#">Familiefavoritter
-            </li>
-            <li>
-              <klasse="sub" href="#">Italiensk
-            </li>
-            <li>
-              <class="sub" href="#">Mexikansk
-            </li>
-            <li>
-              <klasse="sub" href="#">Mad på 30 minutter
-            </li>
-            <li>
-              <class="sub" href="#">Special kost
-            </li>
-            <li>
-              <klasse="sub" href="#">Sæson
-            </li>
-            <li>
-              <class="sub" href="#">Vegatarisk
-            </li>
-            <li>
-              <klasse="sub" href="#">Østen
-            </li>
+          <ul klasse="dropdown">
+            <li><a class="sub" href="#">Familiefavoritter</a></li>
+            <li><a klasse="sub" href="#">Italiensk</a></li>
+            <li><a class="sub" href="#">Mexikansk</a></li>
+            <li><a klasse="sub" href="#">Mad på 30 minutter</a></li>
+            <li><a class="sub" href="#">Special kost</a></li>
+            <li><a klasse="sub" href="#">Sæson</a></li>
+            <li><a class="sub" href="#">Vegatarisk</a></li>
+            <li><a klasse="sub" href="#">Østen</a></li>
           </ul>
         </li>
 
         <li class="menuitem"><a href="#">Anledning</a>
-          <ul klasse"dropdown">
-            <li>
-              <class="sub" href="#">Morgenmad
-            </li>
-            <li>
-              <klasse="sub" href="#">Frokost
-            </li>
-            <li>
-              <class="sub" href="#">Aftensmad
-            </li>
-            <li>
-              <klasse="sub" href="#">Dessert
-            </li>
-            <li>
-              <class="sub" href="#">Gæster
-            </li>
+          <ul klasse="dropdown">
+            <li><a class="sub" href="#">Morgenmad</a></li>
+            <li><a klasse="sub" href="#">Frokost</a></li>
+            <li><a class="sub" href="#">Aftensmad</a></li>
+            <li><a klasse="sub" href="#">Dessert</a></li>
+            <li><a class="sub" href="#">Gæster</a></li>
           </ul>
         </li>
 
         <li class="menuitem"><a href="#">Madkursus</a>
-          <ul klasse"dropdown">
-            <li>
-              <class="sub" href="#">Kursuskalender
-            </li>
-            <li>
-              <klasse="sub" href="#">Madlavningskursus
-            </li>
-            <li>
-              <class="sub" href="#">Online madlavningskursus
-            </li>
+          <ul klasse="dropdown">
+            <li><a class="sub" href="#">Kursuskalender</a></li>
+            <li><a klasse="sub" href="#">Madlavningskursus</a></li>
+            <li><a class="sub" href="#">Online madlavningskursus</a></li>
 
           </ul>
         </li>
 
         <li class="menuitem"><a href="#">Bæredygtighed</a>
-          <ul klasse"dropdown">
-            <li>
-              <class="sub" href="#">Biodiversitet
-            </li>
-            <li>
-              <klasse="sub" href="#">Inspirerende innovationer
-            </li>
-            <li>
-              <class="sub" href="#">Klima
-            </li>
-            <li>
-              <klasse="sub" href="#">Økologi
-            </li>
+          <ul klasse="dropdown">
+            <li><a class="sub" href="#">Biodiversitet</a></li>
+            <li><a klasse="sub" href="#">Inspirerende innovationer</a></li>
+            <li><a class="sub" href="#">Klima</a></li>
+            <li><a klasse="sub" href="#">Økologi</a></li>
 
           </ul>
         </li>
 
-        <li class="menuitem"><a href="#">Om os</a>
+        <li class="menuitem"><a href="#">Om os</a></li>
           <ul klasse"dropdown">
           </ul>
 
@@ -157,7 +96,7 @@
                           <artikelclass="blot1">
                             <ul>
                               <li>
-                                <en class="sub href=" #"Bagning</en<>/li>
+                                <en class="sub href=" #"Bagning</en>
                               <li><a class "sub" href="#">Dressing & saucer</a></li>
                               <li><a class "sub" href="#">Drikkevarerr</a></li>
                               <li><a class "sub" href="#">Fond</a></li>
@@ -301,57 +240,59 @@
             <article class="beskrivelse">
               <figure>
 
-                  <img src="image/pastamedlaks.jpg" alt="Opskrift på pasta med laks" class="kortbillede">
-                </figure>
+                <img src="image/pastamedlaks.jpg" alt="Opskrift på pasta med laks" class="kortbillede">
+              </figure>
 
-                  <p> Fettuccine med laks og aerter </p>
+              <p> Fettuccine med laks og aerter </p>
+              </artikel>
+
+              <div class="teasertekst">
+                <article class="beskrivelse">
+                  <figure>
+
+                    <img src="image/PastaAlfredo.jpg" alt="Opskrift på pasta alfredo" class="kortbillede">
+                  </figure>
+
+                  <p> Pasta Alfredo </p>
                   </artikel>
 
-                  <div class="teasertekst">
-                    <article class="beskrivelse">
-                      <figure>
+              </div>
 
-                          <img src="image/PastaAlfredo.jpg" alt="Opskrift på pasta alfredo" class="kortbillede">
-                        </figure>
+              <div class="Card-flex">
+                <article class="Design">
+                  <h2> Design din egen kogebog og VIND et års forbrug af Urtekrams Fettucine </h2>
+                  <Billede>
+                    <source srcset="image/" media="(min-widht: 1500px)">
+                    <source srcset="image/" media="(min-widht: 700px)">
+                    <img src"image/" alt="Vind et års forbrug af Urtekrams Fettucine" id="forbrug" </design>
 
-                          <p> Pasta Alfredo </p>
-                          </artikel>
+                    <footer class="footer">
+                      <a href="index.html">
+                        <img src="image/Urtekramlogo.svg" alt="oekologi til alle" class"logoibunden"></a>
+                      <article class="kontakt">
+                        <h3>kontakt</h3>
+                        <h4>FAQ</h4>
+                        <h4>Privatliv og cookies</h4>
+                      </article>
 
-                  </div>
+                      <article class="social">
+                        <h3> Sociale links></h3>
+                        <a href="http://facebook.dk">
+                          <img src"image/facebookikon.svg" alt="Urtekrams facebook"></a>
 
-                  <div class="Card-flex">
-                    <article class="Design">
-                      <h2> Design din egen kogebog og VIND et års forbrug af Urtekrams Fettucine </h2>
-                      <Billede>
-                        <source srcset="image/" media="(min-widht: 1500px)">
-                        <source srcset="image/" media="(min-widht: 700px)">
-                        <img src"image/" alt="Vind et års forbrug af Urtekrams Fettucine" id="forbrug" </design>
+                        <a href="http://www.instagram.dk">
+                          <img src="image/instagramikon.svg" alt="Urtekrams instagram" id="instagram"></a>
+                      </article>
 
-<footer class="footer">
-  <a href="index.html">
-    <img src="image/Urtekramlogo.svg" alt="oekologi til alle" class"logoibunden"></a>
-    <article class="kontakt">
-      <h3>kontakt</h3>
-      <h4>FAQ</h4>
-      <h4>Privatliv og cookies</h4>
-    </article>
+                      <article class="information">
+                        <h3>Informationer</h3>
+                        <p>Telefon </p>
+                        <p> </p>
+                        <p> </p>
+                        <p> Find forhandler </p>
+                      </article>
 
-    <article class="social">
-      <h3> Sociale links></h3>
-      <a href="http://facebook.dk">
-        <img src"image/facebookikon.svg" alt="Urtekrams facebook"></a>
-
-<a href="http://www.instagram.dk">
-  <img src="image/instagramikon.svg" alt="Urtekrams instagram" id="instagram"></a>
-</article>
-
-<article class="information">
-  <h3>Informationer</h3>
-  <p>Telefon </p>
-  <p> </p>
-  <p> </p>
-  <p> Find forhandler </p>
-</article> 
+                </footer>
 
 
 
