--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="discription" content="dette er en side" />
   <meta name="keywords" content="urtekram, pasta, fettuccine, mad, food, økologi, italien, inspiration, hverdagsmad">
   <meta name="viewport" content="width=enhedsbredde, indledende skala=1,0">
-  <link rel="typografiark" href="css/landingpage.css">
+  <link rel="stylesheet" type=text/css href="css/Landingpage.css">
 
   <!-- favicon = ikon i faneblad / browser -->
   <link rel="ikon" type="image/x-ikon" href="image/Urtekramlogo.svg" />
@@ -87,7 +87,7 @@
 
                   <!--eller formularclass -->
                   <formularboks="søgning">
-                    <inputtype="tekst" navn="søg" plads="søg">
+                    <inputtype="tekst"> navn="søg" plads="søg">
                       </formular>
 
                       <div class="Produkter">
