--- a/index.html
+++ b/index.html
@@ -15,71 +15,71 @@
   <brødtekst="wrap">
     <nav class="navbar">
 
-      <ul klasse="menu">
+      <ul class="menu">
         <li class"menuitem"><a href="#">Produkter</a>
-          <ul klasse="dropdown">
-            <li><a klasse="sub" href="#">Bagning</a></li>
+          <ul class="dropdown">
+            <li><a class="sub" href="#">Bagning</a></li>
 
             <li><a class="sub" href="#">Dressing & saucer</a></li>
-            <li><a klasse="sub" href="#">Drikkevarer</a></li>
+            <li><a class="sub" href="#">Drikkevarer</a></li>
             <li><a class="sub" href="#">Fond</a></li>
-            <li><a klasse="sub" href="#">Frost</a></li>
+            <li><a class="sub" href="#">Frost</a></li>
             <li><a class="sub" href="#">Glutenfri</a></li>
-            <li><a klasse="sub" href="#">Kolonial</a></li>
+            <li><a class="sub" href="#">Kolonial</a></li>
             <li><a class="sub" href="#">Konserves</a></li>
-            <li><a klasse="sub" href="#">Krydderier</a></li>
+            <li><a class="sub" href="#">Krydderier</a></li>
             <li><a class="sub" href="#">Olie & eddike</a></li>
-            <li><a klasse="sub" href="#">Snacks</a></li>
+            <li><a class="sub" href="#">Snacks</a></li>
           </ul>
         </li>
 
         <li class="menuitem"><a href="#">Opskrifter</a>
-          <ul klasse="dropdown">
+          <ul class="dropdown">
             <li><a class="sub" href="#">Familiefavoritter</a></li>
-            <li><a klasse="sub" href="#">Italiensk</a></li>
+            <li><a class="sub" href="#">Italiensk</a></li>
             <li><a class="sub" href="#">Mexikansk</a></li>
-            <li><a klasse="sub" href="#">Mad på 30 minutter</a></li>
+            <li><a class="sub" href="#">Mad på 30 minutter</a></li>
             <li><a class="sub" href="#">Special kost</a></li>
-            <li><a klasse="sub" href="#">Sæson</a></li>
+            <li><a class="sub" href="#">Sæson</a></li>
             <li><a class="sub" href="#">Vegatarisk</a></li>
-            <li><a klasse="sub" href="#">Østen</a></li>
+            <li><a class="sub" href="#">Østen</a></li>
           </ul>
         </li>
 
         <li class="menuitem"><a href="#">Anledning</a>
-          <ul klasse="dropdown">
+          <ul class="dropdown">
             <li><a class="sub" href="#">Morgenmad</a></li>
-            <li><a klasse="sub" href="#">Frokost</a></li>
+            <li><a class="sub" href="#">Frokost</a></li>
             <li><a class="sub" href="#">Aftensmad</a></li>
-            <li><a klasse="sub" href="#">Dessert</a></li>
+            <li><a class="sub" href="#">Dessert</a></li>
             <li><a class="sub" href="#">Gæster</a></li>
           </ul>
         </li>
 
         <li class="menuitem"><a href="#">Madkursus</a>
-          <ul klasse="dropdown">
+          <ul class="dropdown">
             <li><a class="sub" href="#">Kursuskalender</a></li>
-            <li><a klasse="sub" href="#">Madlavningskursus</a></li>
+            <li><a class="sub" href="#">Madlavningskursus</a></li>
             <li><a class="sub" href="#">Online madlavningskursus</a></li>
 
           </ul>
         </li>
 
         <li class="menuitem"><a href="#">Bæredygtighed</a>
-          <ul klasse="dropdown">
+          <ul class="dropdown">
             <li><a class="sub" href="#">Biodiversitet</a></li>
-            <li><a klasse="sub" href="#">Inspirerende innovationer</a></li>
+            <li><a class="sub" href="#">Inspirerende innovationer</a></li>
             <li><a class="sub" href="#">Klima</a></li>
-            <li><a klasse="sub" href="#">Økologi</a></li>
+            <li><a class="sub" href="#">Økologi</a></li>
 
           </ul>
         </li>
 
         <li class="menuitem"><a href="#">Om os</a></li>
-          <ul klasse"dropdown">
+          <ul class"dropdown">
           </ul>
 
-          <div klasse="burger">
+          <div class="burger">
             <input-id="rulleliste" klasse="Tryk1" type="">
               <label for="dropdown" class="dropdownnav"> ☰ </etiket>
 
@@ -210,7 +210,8 @@
 
 <body>
 
-  <div klasse="tobilleder">
+  <div class="tobilleder">
+    <div class="box">
   </div>
 
   <article id="Pasta">
