--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 	</article>
 
 	<div class="card-flex">
-	<article class="blivset">
+	<article class="Minbog">
 
 	<h2> Design din egen kogebog
 	</h2>
@@ -297,7 +297,7 @@
 	</article>
 
 
-	<button onclick="location.href='hosmig.html'" type="button" class="cta">Se mere</button>
+	<button onclick="location.href='.html'" type="button" class="cta">Se mere</button>
 	</article>
 
 
