--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 	</article>
 
 
-	<button onclick="location.href='.html'" type="button" class="cta">Se mere</button>
+	<button onclick="location".href=.html type="button" class="cta">Se mere</button>
 	</article>
 
 
