--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-	<html lang="da">
+<html lang="da">
 
-	<head>
+<head>
 	<meta charset="utf-8">
 
 	<title>Urtekram</title>
@@ -11,319 +11,258 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
 
-	<!-- favicon = ikon i faneblad / browser -->
+	<!--ikon i faneblad / browser -->
 	<link rel="icon" type="image/x-icon" href="image/Urtekramlogo.svg" />
-	</head>
+</head>
 
-	<body class="wrap">
-	<nav class= "navbar">
+<body class="wrap">
 
-	 <ul class="menu">
-	   <li class="menuitem"><a href="#">Produkter</a>
-	     <ul class="dropdown">
-	       <li><a class="sub" href="#">Bagning</a></li>
-	       <li><a class="sub" href="#">Dressing & saucer</a></li>
-	       <li><a class="sub" href="#">Drikkevarer</a></li>
-	        <li><a class="sub" href="#">Fond</a></li>
-          <li><a class="sub" href="#">Frost</a></li>
-          <li><a class="sub" href="#">Glutenfri</a></li>
-          <li><a class="sub" href="#">Kolonial</a></li>
-          <li><a class="sub" href="#">Konserves</a></li>
-          <li><a class="sub" href="#">Krydderier</a></li>
-          <li><a class="sub" href="#">Olie & eddike</a></li>
-	     </ul>
-	   </li>
-	   <li class="menuitem"><a href="#">Opskrifter</a>
-	     <ul class="dropdown">
-	       <li><a class="sub" href="#">Familiefavoritter</a></li>
-	       <li><a class="sub" href="#">Italiensk</a></li>
-	       <li><a class="sub" href="#">Mexikansk</a></li>
-         <li><a class="sub" href="#">Mad på 30 min</a></li>
-         <li><a class="sub" href="#">Special kost</a></li>
-         <li><a class="sub" href="#">Sæson</a></li>
-         <li><a class="sub" href="#">Vegatarisk</a></li>
-         <li><a class="sub" href="#">Oesten</a></li>
-	     </ul>
-	   </li>
-	   <li class="menuitem"><a href="#">Anledning</a>
-	     <ul class="dropdown">
-	       <li><a class="sub" href="#">Morgenmad</a></li>
-	       <li><a class="sub" href="#">Frokost</a></li>
-	       <li><a class="sub" href="#">Aftensmad</a></li>
-	       <li><a class="sub" href="#">Dessert</a></li>
-         <li><a class="sub" href="#">Gaester</a></li>
-	     </ul>
-	   </li>
+	<nav class="navmenu">
+		<ul class="menu">
+			<li class="menuitem"><a href="#">Produkter</a>
+				<ul class="dropdown">
+					<li><a class="sub" href="#">Bagning</a></li>
+					<li><a class="sub" href="#">Dressing & saucer</a></li>
+					<li><a class="sub" href="#">Drikkevarer</a></li>
+					<li><a class="sub" href="#">Fond</a></li>
+					<li><a class="sub" href="#">Frost</a></li>
+					<li><a class="sub" href="#">Glutenfri</a></li>
+					<li><a class="sub" href="#">Kolonial</a></li>
+					<li><a class="sub" href="#">Konserves</a></li>
+					<li><a class="sub" href="#">Krydderier</a></li>
+					<li><a class="sub" href="#">Olie & eddike</a></li>
+				</ul>
+			</li>
+		</ul>
 
-	       <li class="menuitem"><a href="#">Madkursus</a>
-	     <ul class="dropdown">
-	       <li><a class="sub" href="#">Kursuskalender</a></li>
-	       <li><a class="sub" href="#">Madlavningskursus</a></li>
-	       <li><a class="sub" href="#">Online Madlavningskursus</a></li>
-	     </ul>
-	   </li>
-	   <li class="menuitem"><a href="#">Baeredygtighed</a></li>
-     <li><a class="sub" href="#">Biodiversitet</a></li>
-     <li><a class="sub" href="#">Inspirerende innovationer</a></li>
-     <li><a class="sub" href="#">Klima</a></li>
-     <li><a class="sub" href="#">Oekologi</a></li>
-	 </ul>
+		<ul class="menu">
+			<li class="menuitem"><a href="#">Opskrifter</a>
+				<ul class="dropdown">
+					<li><a class="sub" href="#">Familiefavoritter</a></li>
+					<li><a class="sub" href="#">Italiensk</a></li>
+					<li><a class="sub" href="#">Mexikansk</a></li>
+					<li><a class="sub" href="#">Mad på 30 min</a></li>
+					<li><a class="sub" href="#">Special kost</a></li>
+					<li><a class="sub" href="#">Sæson</a></li>
+					<li><a class="sub" href="#">Vegatarisk</a></li>
+					<li><a class="sub" href="#">Oesten</a></li>
+				</ul>
+			</li>
+		</ul>
 
-   <li class="menuitem"><a href="#">Om Urtekram</a></li>
-   <li><a class="sub" href="#">Om os</a></li>
+		<ul class="menu">
+			<li class="menuitem"><a href="#">Anledning</a>
+				<ul class="dropdown">
+					<li><a class="sub" href="#">Morgenmad</a></li>
+					<li><a class="sub" href="#">Frokost</a></li>
+					<li><a class="sub" href="#">Aftensmad</a></li>
+					<li><a class="sub" href="#">Dessert</a></li>
+					<li><a class="sub" href="#">Gaester</a></li>
+				</ul>
+			</li>
+		</ul>
 
- </ul>
+		<ul class="menu">
+			<li class="menuitem"><a href="#">Madkursus</a>
+				<ul class="dropdown">
+					<li><a class="sub" href="#">Kursuskalender</a></li>
+					<li><a class="sub" href="#">Madlavningskursus</a></li>
+					<li><a class="sub" href="#">Online Madlavningskursus</a></li>
+				</ul>
+			</li>
+		</ul>
 
-	<div class="burger">
-	<input id="dropdown" class="Tryk" type="checkbox">
-	<label for="dropdown" class="dropdownnavbar"> ☰ </label>
+		<ul class="menu">
+			<li class="menuitem"><a href="#">Baeredygtighed</a>
+				<ul class="dropdown">
+					<li><a class="sub" href="#">Biodiversitet</a></li>
+					<li><a class="sub" href="#">Inspirerende innovationer</a></li>
+					<li><a class="sub" href="#">Klima</a></li>
+					<li><a class="sub" href="#">Oekologi</a></li>
+				</ul>
+			</li>
+		</ul>
 
-	<div class="navbaren">
+		<ul class="menu">
+			<li class="menuitem"><a href="#">Om Urtekram</a>
+				<ul class="dropdown">
+					<li><a class="sub" href="#">Om os</a></li>
 
-	<form class="search">
-	<input type="text" name="search" placeholder="Søg">
-	</form>
-
-	<div class="Produkter">
-	<input id="Se1" class="Se1" type="checkbox">
-	<label for="Se1" class="show1"> Produkter </label>
-	<article class="mere1">
-	<ul>
-	<li><a class="sub" href="#">Bagning</a></li>
-	<li><a class="sub" href="#">Dressing & saucer</a></li>
-	<li><a class="sub" href="#">Drikkevarer</a></li>
-	<li><a class="sub" href="#">Fond</a></li>
-  <li><a class="sub" href="#">Frost</a></li>
-  <li><a class="sub" href="#">Glutenfri</a></li>
-  <li><a class="sub" href="#">Kolonial</a></li>
-  <li><a class="sub" href="#">Konserves</a></li>
-  <li><a class="sub" href="#">Krydderier</a></li>
-  <li><a class="sub" href="#">Olie & eddike</a></li>
-  <li><a class="sub" href="#">Snacks</a></li>
-	</ul>
-	</article>
-	</div>
+				</ul>
+			</li>
+		</ul>
 
 
+		<div class="burgermenu">
+			<input id="dropdown" class="Tryk" type="checkbox">
+			<label for="dropdown" class="dropdownnavbar"> ☰ </label>
+		</div>
 
+			<div class="navbaren">
+			</div>
 
-	<div class="Opskrifter">
-	<input id="Se2" class="Se2" type="checkbox">
-	<label for="Se2" class="show2"> Opskrifter </label>
-	<article class="mere2">
-	<ul>
-	<li><a class="sub" href="#">Familiefavoritter</a></li>
-	<li><a class="sub" href="#">Iltaliensk</a></li>
-	<li><a class="sub" href="#">Mexikansk</a></li>
-	<li><a class="sub" href="#">Mad på 30 minutter</a></li>
-  <li><a class="sub" href="#">Special kost</a></li>
-  <li><a class="sub" href="#">Saeson</a></li>
-  <li><a class="sub" href="#">Vegatarisk</a></li>
-  <li><a class="sub" href="#">Oesten</a></li>
-	</ul>
-	</article>
-	</div>
-
-
-	<div class="Anledning">
-	<input id="Se3" class="Se33" type="checkbox">
-	<label for="Se3" class="show3"> Anledning </label>
-	<article class="mere3">
-	<ul>
-	<li><a class="sub" href="#">Morgenmad</a></li>
-	<li><a class="sub" href="#">Frokost</a></li>
-	<li><a class="sub" href="#">Aftensmad</a></li>
-	<li><a class="sub" href="#">Dessert</a></li>
-  <li><a class="sub" href="#">Gaester</a></li>
-	</ul>
-	</article>
-	</div>
-
-
-	<div class="Madkursus">
-	<input id="Se4" class="Se4" type="checkbox">
-	<label for="SE4" class="show4"> Madkursus </label>
-	<article class="mere4">
-	<ul>
-	<li><a class="sub" href="#">Kursuskalender</a></li>
-	<li><a class="sub" href="#">Madlavningskursus</a></li>
-	<li><a class="sub" href="#">Online Madlavningskursus</a></li>
-	</ul>
-	</article>
-	</div>
-
-
-	<div class="Baeredygtighed">
-	<input id="Se5" class="Se5" type="checkbox">
-	<label for="Se5" class="show5"> Baeredygtighed </label>
-	<article class="mere5">
-	<ul>
-	<li><a class="sub" href="#">Biodiversitet</a></li>
-	<li><a class="sub" href="#">Inspirerende innovationer</a></li>
-	<li><a class="sub" href="#">Klima</a></li>
-	<li><a class="sub" href="#">Oekologi</a></li>
-	</ul>
-	</article>
-	</div>
-	</div>
-	</div>
-
-  <div class="Om Urtekram">
-	<input id="Se6" class="Se6" type="checkbox">
-	<label for="Se6" class="show5"> Om Urtekram </label>
-	<article class="mere6">
-	<ul>
-	<li><a class="sub" href="#">Om os</a></li>
-
-	</ul>
-	</article>
-	</div>
-	</div>
-	</div>
+				<form class="search">
+					<input type="text" name="search" placeholder="Søg">
+				</form>
+</nav>
 
 
 
 
-	<div class="logotop">
-	<a href="http://www.urtekram.msfh.dk">
-	<img src="image/Urtekramlogo.svg" alt="Urtekram Fettuccine" id="toplogo"></a>
-	</div>
-	<aside class="ikon">
-	<a href=".html">  <img src="image/Produktmockupforside.JPG" alt="Mockup" id="Mockup"></a>
-	<img src="image/mineopskrifter.svg" alt="Mine opskrifter" id="Mine">
-	</aside>
 
-	</nav>
-	<header>
 
-	<div class= "Emballage">
-	</div>
-	<article id="Fettuccine"> <h2>Vi har fået ny emballage</h2> <p>Stadig det samme gode produkt.</p> </article>
-	<a href=".html">
-	<img src="image/Produktmockupforside.jpg" alt="Ny Emballage" id="Nyt"></a>
+		<div class="logotop">
+			<a href="http://www.urtekram.msfh.dk">
+				<img src="image/Urtekramlogo.svg" alt="Urtekram Fettuccine" id="toplogo"></a>
+		</div>
+		<aside class="ikon">
+			<a href=".html"> <img src="image/Produktmockupforside.JPG" alt="Mockup" id="Mockup"></a>
+			<img src="image/mineopskrifter.svg" alt="Mine opskrifter" id="Mine">
+		</aside>
+
+
+
+
+	<header class="top">
+
 
 
 	</header>
 
-  <div class="Glutenfri">
+	<section class="blaa">
+	</section>
+	<section class="Emballage">
+	</section>
+	<img src="image/produktforside.jpg" alt="Ny Emballage" id="Nyt">
+	<article id="Fettuccine">
+		<h2>Vi har fået ny emballage</h2>
+		<p>Stadig det samme gode produkt.</p>
+	</article>
 
-  <h2> Glutenfri pastakursus </h2>
-  <picture>
-  <source srcset="image/" media="(min-width: 700px)">
-  <img src="image/" alt="Tilmeld dig allerede i dag" id="hosmigpic">
-  </picture>
 
-  <button onclick="location.href='Glutenfri.html'" type="button" class="cta">Tilmedig her</button>
-  </article>
+
+
+
+	<section class="a">
+		<article class="Minbog">
+
+			<h2> Design din egen kogebog
+			</h2>
+			<picture>
+				<img src="image/Minkogebog.JPG" alt="Kogebog" id="Kogebog">
+			</picture>
+			<p>
+				og VIND et aars forbrug af Urtekrams Fettuccine<br><br>
+				<button class="deltag">Deltag her</button>
+			</p>
+
+		</article>
+	</section>
+
+
+	<section class="Glutenfri">
+
+		<h2> Glutenfri pastakursus </h2>
+		<picture>
+			<source srcset="image/" media="(min-width: 700px)">
+			<img src="image/" alt="Tilmeld dig allerede i dag" id="kursus">
+		</picture>
+
+		<button onclick="location.href='Glutenfri.html'" type="button" class="cta">Tilmeld dig her</button>
+	</section>
 
 
 
 	<article class="nyheder">
-	<h2> Familiefavoritter</h2>
-	<div class="boxing">
+		<h2> Familiefavoritter</h2>
+		<div class="boxing">
 
-	<div class="cardteaser">
-	<article class="beskrivelse">
-	<picture>
-	<img src="image/Medlaks.jpg" media="(min-width: 700px)" alt="Opskrift på aeggekage" class="cardpic">
-	</picture>
+			<div class="teaser">
+				<article class="beskrivelse">
+					<picture>
+						<img src="image/Medlaks.jpg" alt="Opskrift på aeggekage" class="kortbillede">
+					</picture>
 
-	<h4>Aeggekage med laks</h4>
-	</article>
-	<article class="Opskrift"> <h5> Få opskriften her </h5> </article>
-	</div>
+					<h4>Aeggekage med laks</h4>
+				</article>
+				<article class="Opskrift">
+					<h5> Få opskriften her </h5>
+				</article>
+			</div>
 
-	<div class="cardteaser">
-	<article class="beskrivelse">
-  <picture>
-	<img src="image/PastaAlfredo.jpg" media="(min-width: 700px)" alt="Pasta Alfredo" class="cardpic">
-	</picture>
-	<h4>Pasta Alfredo</h4>
-	</article>
-	<article class="Opskrift"> <h5> Få opskriften her</h5> </article>
-	</div>
+			<div class="teaser">
+				<article class="beskrivelse">
+					<picture>
+						<img src="image/PastaAlfredo.jpg" alt="Pasta Alfredo" class="kortbillede">
+					</picture>
+					<h4>Pasta Alfredo</h4>
+				</article>
+				<article class="Opskrift">
+					<h5> Få opskriften her</h5>
+				</article>
+			</div>
 
-	<div class="cardteaser">
-	<article class="beskrivelse">
-  <picture>
+			<div class="teaser">
+				<article class="beskrivelse">
+					<picture>
 
-	<img src="image/Pastamedlaks.jpg" media="(min-width: 700px)" alt="Pasta med laks" class="cardpic">
-	</picture>
-	<h4>Pasta med laks</h4>
-	</article>
-	<article class="Opskrift"> <h5> Få opskriften her</h5> </article>
-	</div>
+						<img src="image/Pastamedlaks.jpg" alt="Pasta med laks" class="kortbillede">
+					</picture>
+					<h4>Pasta med laks</h4>
+				</article>
+				<article class="Opskrift">
+					<h5> Få opskriften her</h5>
+				</article>
+			</div>
 
-	<div class="cardteaser">
-  <article class="beskrivelse">
-	<picture>
-	<img src="image" media="(min-width: 700px)" alt="Juletræs blinkende lygte" class="cardpic">
-	</picture>
-  <h4></h4>
-	</article>
-	<article class="Opskrift"> <h5> Få opskriften her </h5> </article>
+			<div class="teaser">
+				<article class="beskrivelse">
+					<picture>
+						<img src="image/Medlaks.jpg" alt="Aeggekage" class="kortbillede">
+					</picture>
+					<h4></h4>
+				</article>
+				<article class="Opskrift">
+					<h5> Få opskriften her </h5>
+				</article>
 
-	</div>
+			</div>
 
-	<div class="cardteaser" id="sidste">
-	<article class="beskrivelse">
-	<picture>
-	<img src="image/" media="(min-width: 700px)"alt="Juleslik til din lille hund" class="cardpic">
-	</picture>
-   <h4></h4>
-	</article>
-	<article class="Opskrift"> <h5> Få opskriften her</h5> </article>
-	</div>
+			<div class="teaser" id="sidste">
+				<article class="beskrivelse">
 
-
-	</div>
-
-	</article>
-
-	<div class="card-flex">
-	<article class="Minbog">
-
-	<h2> Design din egen kogebog
-	</h2>
-	<picture>
-	<img src="image/Minkogebog.jpg" alt="Kogebog" id="Kogebog">
-	</picture>
-	<p>
-	og VIND et aars forbrug af Urtekrams Fettuccine<br><br>
-	<button class="cta">Deltag her</button>
-	</p>
-
-
+					<h4></h4>
+				</article>
+				<article class="Opskrift">
+					<h5> Få opskriften her</h5>
+				</article>
+			</div>
+		</div>
 	</article>
 
 
-	<button onclick="location".href=.html type="button" class="cta">Se mere</button>
-	</article>
 
 
-	</div>
-
-	</div>
 
 
 
 	<footer class="footer">
-	<a href="index.html"> <img src="image/Urtekramlogo.svg" alt="urtekram" class="logobund"></a>
-	<article class="kontakt">
-	<h3>Kontakt</h3>
-	<h4>FAQ</h4>
-	<h4>Nyhedsbrev</h4>
-	<h4>Privatliv og Cookies</h4>
-	</article>
+		<a href="index.html"> <img src="image/Urtekramlogo.svg" alt="urtekram" class="logobund"></a>
+		<article class="kontakt">
+			<h3>Kontakt</h3>
+			<h4>FAQ</h4>
+			<h4>Nyhedsbrev</h4>
+			<h4>Privatliv og Cookies</h4>
+		</article>
 
-	<article class="social">
-	<h3> Sociale links</h3>
-	<a href="http://www.facebook.dk">
-	<img src="image/.svg" alt="Urtekrams's facebook" id="facebook"></a>
+		<article class="social">
+			<h3> Sociale links</h3>
+			<a href="http://www.facebook.dk">
+				<img src="image/.svg" alt="Urtekrams's facebook" id="facebook"></a>
 
-	<a href="http://www.instagram.dk">
-	<img src="image/.svg" alt="Urtekrams's instagram" id="instagram"></a>
-	</article>
+			<a href="http://www.instagram.dk">
+				<img src="image/.svg" alt="Urtekrams's instagram" id="instagram"></a>
+		</article>
 
 
 	</footer>
@@ -334,6 +273,6 @@
 
 
 
-	</body>
 
-	</html>
+
+</html>
