--- a/Opskrifter.html
+++ b/Opskrifter.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="Example">
 	<meta name="keywords" content="Mine opskrifter, login, inspiartion, mad, madopskrifter">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/opskrifter.css">
+	<link rel="stylesheet" href="css/style.css">
 
 	<!--ikon i faneblad / browser -->
 	<link rel="icon" type="image/x-icon" href="image/Urtekramlogo.svg" />
@@ -21,7 +21,7 @@
   <div>Familiens livretter</div>
     <div>Hverdagsretter</div>
       <div>Gaestemad</div>
-      <div>Online video</div> 
+      <div>Online video</div>
 </section>
 
 <section>
