--- a/Opskrifter.html
+++ b/Opskrifter.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="Example">
 	<meta name="keywords" content="Mine opskrifter, login, inspiartion, mad, madopskrifter">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style1.css">
+	<link rel="stylesheet" href="css/style.css">
 
 	<!--ikon i faneblad / browser -->
 	<link rel="icon" type="image/x-icon" href="image/Urtekramlogo.svg" />
@@ -25,7 +25,7 @@
 			<div class="dropdown">
 				<button class="dropbtn">Produkter</button>
 				<div class="dropdown-content">
-					<a href="#">bagning</a>
+					<a href="#">Bagning</a>
 					<a href="#">Dressing & saucer</a>
 					<a href="#">Drikkevarer</a>
 					<a href="#">Fond</a>
