--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class="dropdown">
 		<button class="dropbtn">Produkter</button>
 		<div class="dropdown-content">
-			<a href="#">bagning</a>
+			<a href="#">Bagning</a>
 			<a href="#">Dressing & saucer</a>
 			<a href="#">Drikkevarer</a>
 			<a href="#">Fond</a>
@@ -158,7 +158,7 @@
 			<div class="teaser">
 				<article class="beskrivelse">
 					<picture>
-						<a href="#"><img id="laks" src="image/Aeggekagelaks.png" alt="Opskrift på aeggekage"></img></a>
+						<a href="#"><img id="laks" src="image/Aeggekagelaks.png" alt="Opskrift på aeggekage"></a>
 					</picture>
 					<h4 id="teasertekst2">Æggekage med laks</h4>
 				</article>
