--- a/Opskrifter.html
+++ b/Opskrifter.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="Example">
 	<meta name="keywords" content="Mine opskrifter, login, inspiartion, mad, madopskrifter">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style2.css">
 
 	<!--ikon i faneblad / browser -->
 	<link rel="icon" type="image/x-icon" href="image/Urtekramlogo.svg" />
@@ -117,9 +117,7 @@
 	<!-- login-ikon -->
 	<img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine">
 
-	<div class="Tryk">
-	<button class="Tryk1">Mine opskrifter</button>
-</div>
+	
 
 	<div id="hvid"></div>
 
