--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 <!-- Familiefavoritter -->
 	<article class="nyheder">
 		<h2> Familiefavoritter</h2>
+	</article>
 
 		<!-- Aeggekage laks -->
 			<div class="teaser">
@@ -184,8 +185,7 @@
 			<div class="teaser">
 				<article class="beskrivelse">
 					<picture>
-
-						<a href="#"><img id="pastalaks" src="image/pastamedlaks.jpg" alt="Pasta med laks" class="kortbillede">
+         	<a href="#"><img id="pastalaks" src="image/pastamedlaks.jpg" alt="Pasta med laks"></a>
 					</picture>
 					<h4 id=teasertekst3>Pasta med laks</h4>
 				</article>
@@ -193,7 +193,7 @@
 					<h5 id="her3"> Få opskriften her</h5>
 				</article>
 			</div>
-	</article>
+
 
 
 
