--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		</div>
 
 <!-- login-ikon -->
-		<img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine">
+		<a href="https://www.Opskrifter.html.dk"<img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine">
 			<div id="blaa"></div>
 				<div id="hvid"></div>
 
@@ -125,8 +125,9 @@
 
 <!-- Artikel -->
 	<article id="Fettuccine">
-		<h2>Vi har fået ny emballage</h2>
-		<p>Stadig det samme gode produkt.</p>
+		<p id="em">Her hos Urtekram elsker vi pasta,</p>
+		<p id="overraskelse">og det kan ikke komme som nogle overraskelse,
+			at der tit i løbet af vores uge kommer pasta på bordet.</p>
 	</article>
 
 <!-- Kogebog -->
@@ -177,7 +178,7 @@
 					<h4 id="teasertekst1">Pasta Alfredo</h4>
 				</article>
 				<article class="Opskrift">
-					<h5 id="her1"> Få opskriften her</h5>
+					<a href="#" "https://www.pasta.html.dk"<h5 id="her1"> Få opskriften her</h5></a>
 				</article>
 			</div>
 
