--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
 
 	<!-- login-ikon -->
 	<a href="https://www.Opskrifter.html.dk"> <img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine">
-		<div id="blaa"></div>
+
 		<section id="hvid"></section>
 
+<!-- blaa kasse -->
+	<div id="blaa"></div>
 
 		<!-- Emballagebillede -->
 		<a href=".html"><img src="image/produktmuckupforside.jpg" alt="Mockup" id="Mockup"></a>
