--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
 
 
 		<!-- Artikel -->
-		<div id="bordet"></div>
-
+		<div id="bordet">
 		<article id="Fettuccine">
 			<p id="em">Her hos Urtekram elsker vi pasta,</p>
 			<p id="overraskelse">og det kan ikke komme som nogle overraskelse,
 				at der tit i løbet af vores uge kommer pasta på bordet.</p>
 		</article>
+	</div>
 
 		<!-- Kogebog -->
 		<section class="a">
