--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Urtekram</title>
 	<meta name="author" content="Your Name">
 	<meta name="description" content="Example">
-	<meta name="keywords" content="Urtekram, pasta, Fettuccine">
+	<meta name="keywords" content="Urtekram, Urtekram fettuccine, pasta, Fettuccine">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
 
@@ -100,8 +100,7 @@
 	<!-- burgermenu -->
 
 	<div class="burgermenu">
-		<input id="dropdown" class="Tryk" type="checkbox">
-		<label for="dropdown" class="dropdownnavbar"> ☰ </label>
+		<label for="dropdown" class="dropdownbar"> ☰ </label>
 	</div>
 
 
@@ -141,7 +140,7 @@
 					<img src="image/Minkogebog.JPG" alt="Kogebog" id="Kogebog">
 				</picture>
 				<p id="para">
-					VIND et års forbrug af Urtekrams Fettuccine<br><br>
+					VIND et års forbrug af Urtekrams Fettuccine<p>
 					<button class="deltag">Deltag her</button>
 				</p>
 			</article>
